--- a/test/tests/absolute_layout.html
+++ b/test/tests/absolute_layout.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/> 
-	<title>Testing layouts</title> 
+	<title>Cease</title> 
 	<meta name="description" content=""/>
 	
 	<link rel="stylesheet" type="text/css" href="../cease.css"/>
@@ -23,8 +23,10 @@
 			<div class="element"></div>
 		</div>
 		<div class="wrapper abs" name="parent">
-			<div class="element"></div>
-			<div class="element cease" cease="ref : #test1; size:1 1; pivot : 0 0; position : left top">to do.</div>
+			<div class="element cease" cease="ref : parent; size:40px 20px; pivot : 0 0; position : left 10px"></div>
+			<div class="element cease" cease="ref : prev; size:1.2 1; pivot : 0 1; position : 120px bottom">to do.</div>
+			<div class="element cease" cease="ref : prev; size:1.2 1; pivot : 0 1; position : 120px bottom">to do.</div>
+			<div class="element cease" cease="ref : prev; size:1.2 1; pivot : 0 1; position : 120px bottom">to do.</div>
 		</div>
 	</div>
 	
